Tounge Data study halfway

--- a/notebooks/Besprechung_2021-06-03.ipynb
+++ b/notebooks/Besprechung_2021-06-03.ipynb
@@ -1016,10 +1016,10 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
